# Fortress-protocol

./: .env.rpc  .gitignore  ARCHITECTURAL_UPGRADE_COMPLETE.md  ARCHITECTURAL_UPGRADE_PHASE1_COMPLETE.md  AUTOMATION_COMPLETE.md  Anchor.toml  BUG_FIXES_COMPLETE.md  BULK_PURCHASE_ANALYSIS_FINAL_VERDICT.md  BUY_TICKET_ENHANCEMENT_COMPLETE.md  COMPLETE_CLEANUP_SUMMARY.md  Cargo.lock.pinned  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_BLOCKED.md  DEPLOYMENT_SUCCESS_SUMMARY.txt  DRIFT_PROOF_GLOBAL_SYNC_COMPLETE.md  DRIFT_PROOF_SYNC_BEFORE_VS_AFTER.md  DRIFT_PROOF_SYNC_IMPLEMENTATION_SUMMARY.md  DRIFT_PROOF_SYNC_QUICK_START.md  DRIFT_PROOF_SYNC_READY_FOR_DEPLOYMENT.md  DRIFT_PROOF_SYNC_TESTING_GUIDE.md  FORTRESS_LOTTERY_SPEC.md  FRESH_DEPLOYMENT_COMPLETE.md  FRONTEND_UPDATE_COMPLETE.md  KEEPER_BOT_ACCOUNT_FIX_COMPLETE.md  PDA_MANIFEST_DEVNET.json  PDA_MANIFEST_MAINNET.json  PER_TIER_DRAW_REFACTOR_COMPLETE.md  PRICING_CONFIG_REFERENCE.md  PRIORITY_TIPS_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_REFERENCE_DEVNET.md  README.md  RECOVERY_COMPLETE.md  RECOVERY_PLAN.md  RECOVERY_QUICKSTART.md  RPC_QUICK_START.md  RPC_RATE_LIMIT_FIX.md  RPC_REFACTORING_IMPLEMENTATION.md  (+33 more)
programs/fortress_protocol/: Cargo.toml  Cargo.toml.save
programs/fortress_protocol/src/: draw_helpers.rs  errors.rs  lib.rs  oracle.rs  state.rs
programs/fortress_protocol/src/instructions/: admin.rs  buy_ticket.rs  entropy.rs  initialize.rs  lazy_reset.rs  mod.rs  rollover.rs
programs/fortress_protocol/src/state/: global_registry.rs  treasury.rs  (+4 more)
programs/fortress_protocol/tests/: integration_tests.rs
(+166 files in other folders)
